--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
      <title>Git rules</title>
 </head>
 <body>
+     <input type="text" class="">
+     <input type="text" class="input">
      <script>
           work();
           calculate();
