--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
      <title>Git rules</title>
 </head>
 <body>
-     <input type="text" class="">
-     <input type="text" class="input">
+     <!-- gchbmvc hb,vmc  -->
      <script>
           work();
           calculate();
